src/FinancialForce Accounting/objects/codaCheckRange__c.object
<CustomObject>
    <customHelpPage>codahelpcheckrange</customHelpPage>
    <description>Defines a range of valid check numbers for the associated bank account..</description>
    <fields>
        <fullName>Activated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BankAccount__c</fullName>
        <label>Bank Account</label>
        <referenceTo>codaBankAccount__c</referenceTo>
        <relationshipLabel>Check Ranges</relationshipLabel>
        <relationshipName>CheckRanges</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CheckRangeName__c</fullName>
        <label>Check Range Name</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LastCheckNumber__c</fullName>
        <label>Last Check Number</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NextCheckNumber__c</fullName>
        <label>Next Check Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>codaCompany__c</referenceTo>
        <relationshipLabel>Check Ranges</relationshipLabel>
        <relationshipName>CheckRanges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StartCheckNumber__c</fullName>
        <label>Start Check Number</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitofWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Check Range</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CHR{00000}</displayFormat>
        <label>Check Range ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Check Ranges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>